# DesignPatterns

./: CMakeLists.txt
Observer/: Observable.cpp  Observable.h  Observer.cpp  Observer.h  ObserverTest.cpp
SOLIDDesignPrinciples/: OpenClosed.cpp  SingleResponsabilityPrinciple.cpp
